# gitplot

./: .gitignore  Dockerfile  README.md  gitplot.py  requirements.txt  setup.cfg
src/gitplot/: gitplot.py  requirements.txt
