[metadata]
name = gitplot-vincentherl
version = 0.0.1
author = Vincent Herlemont
author_email = vincent@herlemont.fr
description = Display git activities by days, months and hours.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincent-herlemont/gitplot
project_urls =
    Bug Tracker = https://github.com/vincent-herlemont/gitplot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
   matplotlib==3.5.1
   july==0.1.3


[options.packages.find]
where = src